success in generating recipe (Audito,whisper, chatGPT)