@@ -8,40 +8,55 @@ public class Whisper {
     private static final String API_ENDPOINT = "https://api.openai.com/v1/audio/transcriptions";
     private static final String TOKEN = "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";
     private static final String MODEL = "whisper-1";
-    //private static final String FILE_PATH = "/Users/arthurandersen/Documents/CSE110/Lab4/lib/Ground_beef_pasta_tomatoes.mp3";
+   // private static final String FILE_PATH = "/Users/arthurandersen/Documents/CSE110/Lab4/lib/LAB4.mpeg";
 
    
     public static String transcribeAudio(String filePath) throws IOException, URISyntaxException, JSONException {
+
+        // Create file object from file path
         File file = new File(filePath);
         if (!file.exists()) {
             throw new FileNotFoundException("File not found: " + filePath);
         }
 
-        String boundary = "Boundary-" + System.currentTimeMillis();
-
-        // Set up the connection
-        URL url = new URL(API_ENDPOINT);
+        // Set up HTTP connection
+        URL url = new URI(API_ENDPOINT).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("POST");
         connection.setDoOutput(true);
+
+        // Set up request headers
+        String boundary = "Boundary-" + System.currentTimeMillis();
+        connection.setRequestProperty(
+                "Content-Type",
+                "multipart/form-data; boundary=" + boundary);
         connection.setRequestProperty("Authorization", "Bearer " + TOKEN);
-        connection.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
 
-        // Create the request body
-        try (OutputStream outputStream = connection.getOutputStream()) {
-            writeParameterToOutputStream(outputStream, "model", MODEL, boundary);
-            writeFileToOutputStream(outputStream, file, boundary);
-            outputStream.write(("--" + boundary + "--\r\n").getBytes());
-            outputStream.flush();
-        }
+        // Set up output stream to write request body
+        OutputStream outputStream = connection.getOutputStream();
 
-        // Get the response from the server
+        // Write model parameter to request body
+        writeParameterToOutputStream(outputStream, "model", MODEL, boundary);
+
+        // Write file parameter to request body
+        writeFileToOutputStream(outputStream, file, boundary);
+
+        // Write closing boundary to request body
+        outputStream.write(("\r\n--" + boundary + "--\r\n").getBytes());
+
+        // Flush and close output stream
+        outputStream.flush();
+        outputStream.close();
+
+        // Get response code
         int responseCode = connection.getResponseCode();
+
+        // Check response code and handle response accordingly
         if (responseCode == HttpURLConnection.HTTP_OK) {
             return handleSuccessResponse(connection);
         } else {
-            handleErrorResponse(connection);
-            return null; // or throw an exception
+           handleErrorResponse(connection);
+           return null;
         }
     }
 
@@ -89,17 +104,6 @@ public class Whisper {
         System.err.println("Error during transcription: " + errorResponse.toString());
         // Here you might want to throw an exception instead
     }
-
-    // public static void main(String[] args) {
-    //     try {
-    //         String transcription = transcribeAudio(FILE_PATH);
-    //         if (transcription != null) {
-    //             System.out.println("Transcription: " + transcription);
-    //         }
-    //     } catch (IOException | URISyntaxException | JSONException e) {
-    //         e.printStackTrace();
-    //     }
-    // }
 
     
 }
